--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,23 +1,29 @@
 <div class="container">
-  <h1>Welcome to Sinatra!</h1>
-  <p>Hello, world!</p>
+  <h1>Welcome to our site!</h1>
+  
+  <br><br>
+  
+  <form action="/login" method="post">
+    <h3>Sign In :</h3>
+    <span>Email</span><br><input type="text" name="sign_in[email]">
+    <br>
+    <span>Password</span><br><input type="password" name="sign_in[password_hash]">
+    <br>
+    <input type="submit">
+  </form>
+  
+  <br><br>
+  
+  <form action="/signup" method="post">
+    <br>
+    <h3>Or Sign Up!</h3>
+    <span>Name</span><br><input type="text" name="sign_up[first_name]">
+    <br>
+    <span>Password</span><br><input type="password" name="sign_up[password_hash]">
+    <br>
+    <span>Email</span><br><input type="text" name="sign_up[email]">
+    <br>
+    <input type="submit">
+  </form>
 
-  <table>
-    <tr>
-      <th>File Description</th>
-      <th>File Location</th>
-    </tr>
-    <tr>
-      <td>This view file</td>
-      <td><code><%= __FILE__.gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The layout file</td>
-      <td><code><%= File.expand_path('../layout.erb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The current controller</td>
-      <td><code><%= File.expand_path('../../controllers/index.rb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-  </table>
 </div>
